<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".main.component.NewPostPage">

    <include
        android:id="@+id/include"
        layout="@layout/toolbar_custom_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include">

        <EditText
            android:id="@+id/newPostInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:background="@color/white"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/new_post_input"
            android:inputType="textMultiLine"
            android:maxHeight="100dp"
            android:paddingVertical="12dp" />

        <ImageView
            android:id="@+id/imageSelected"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="#EBEDEF"
            android:contentDescription="@string/new_post_image_icon_content_description"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/addPhoto"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:drawablePadding="12dp"
            android:gravity="center_vertical"
            android:paddingVertical="12dp"
            android:text="@string/new_post_add_photo"
            app:drawableStartCompat="@drawable/baseline_image_24" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>